src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/*! locomotive-scroll v4.1.3 | MIT License | https://github.com/locomotivemtl/locomotive-scroll */

html[data-scroll-orientation="horizontal"] body {
  width: fit-content;
}

/* Only necessary with horizontal scrolling */
html[data-scroll-orientation="horizontal"] [data-scroll-container] {
  display: flex;
}

html.has-scroll-smooth {
  overflow: hidden;
}

html.has-scroll-dragging {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.has-scroll-smooth body {
  overflow: hidden;
}

.has-scroll-smooth [data-scroll-container] {
  min-height: 100vh;
}

[data-scroll-direction="vertical"] [data-scroll-container] {
  height: 100vh;
  display: inline-block;
  white-space: nowrap;
}

[data-scroll-direction="vertical"] [data-scroll-section] {
  display: inline-block;
  vertical-align: top;
  white-space: nowrap;
  height: 100%;
}

.c-scrollbar {
  position: absolute;
  right: 0;
  top: 0;
  width: 11px;
  height: 100%;
  transform-origin: center right;
  transition: transform 0.3s, opacity 0.3s;
  opacity: 0;
}
.c-scrollbar:hover {
  transform: scaleX(1.45);
}
.c-scrollbar:hover,
.has-scroll-scrolling .c-scrollbar,
.has-scroll-dragging .c-scrollbar {
  opacity: 1;
}
[data-scroll-direction="vertical"] .c-scrollbar {
  width: 100%;
  height: 10px;
  top: auto;
  bottom: 0;
  transform: scaleY(1);
}
[data-scroll-direction="vertical"] .c-scrollbar:hover {
  transform: scaleY(1.3);
}

.c-scrollbar_thumb {
  position: absolute;
  top: 0;
  right: 0;
  background-color: black;
  opacity: 0.5;
  width: 7px;
  border-radius: 10px;
  margin: 2px;
  cursor: -webkit-grab;
  cursor: grab;
}
.has-scroll-dragging .c-scrollbar_thumb {
  cursor: -webkit-grabbing;
  cursor: grabbing;
}
[data-scroll-direction="vertical"] .c-scrollbar_thumb {
  right: auto;
  bottom: 0;
}

/*! locomotive-scroll v4.1.3 | MIT License | https://github.com/locomotivemtl/locomotive-scroll */
html.has-scroll-smooth {
  overflow: hidden;
}

html.has-scroll-dragging {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.has-scroll-smooth body {
  overflow: hidden;
}

.has-scroll-smooth [data-scroll-container] {
  min-height: 100vh;
}

[data-scroll-direction="vertical"] [data-scroll-container] {
  height: 100vh;
  display: inline-block;
  white-space: nowrap;
}

[data-scroll-direction="vertical"] [data-scroll-section] {
  display: inline-block;
  vertical-align: top;
  white-space: nowrap;
  height: 100%;
}

.c-scrollbar {
  position: absolute;
  right: 0;
  top: 0;
  width: 11px;
  height: 100%;
  transform-origin: center right;
  transition: transform 0.3s, opacity 0.3s;
  opacity: 0;
}
.c-scrollbar:hover {
  transform: scaleX(1.45);
}
.c-scrollbar:hover,
.has-scroll-scrolling .c-scrollbar,
.has-scroll-dragging .c-scrollbar {
  opacity: 1;
}
[data-scroll-direction="vertical"] .c-scrollbar {
  width: 100%;
  height: 10px;
  top: auto;
  bottom: 0;
  transform: scaleY(1);
}
[data-scroll-direction="vertical"] .c-scrollbar:hover {
  transform: scaleY(1.3);
}

.c-scrollbar_thumb {
  position: absolute;
  top: 0;
  right: 0;
  background-color: black;
  opacity: 0.5;
  width: 7px;
  border-radius: 10px;
  margin: 2px;
  cursor: -webkit-grab;
  cursor: grab;
}
.has-scroll-dragging .c-scrollbar_thumb {
  cursor: -webkit-grabbing;
  cursor: grabbing;
}
[data-scroll-direction="vertical"] .c-scrollbar_thumb {
  right: auto;
  bottom: 0;
}

html.lenis {
  height: auto;
}
.lenis.lenis-smooth {
  scroll-behavior: auto;
}
.lenis.lenis-smooth [data-lenis-prevent] {
  overscroll-behavior: contain;
}
.lenis.lenis-stopped {
  overflow: hidden;
}
.lenis.lenis-scrolling iframe {
  pointer-events: none;
}

:root {
  --vh: 1vh;
  --wrap-width: 98%;
}

.h-full-screen {
  height: calc(var(--vh) * 100);
}

html,
body {
  overscroll-behavior: none;
  width: 100%;
  height: 100%;
  min-width: 100%;
  min-height: 100%;
  overflow: hidden;
  margin: 0px;
  height: auto;
  background-color: black;
}


.text-gray {
  --tw-text-opacity: 1;
  color: rgba(184, 184, 184, var(--tw-text-opacity));
}

.animation {
  margin: 0px;
  transition: all 0.5s cubic-bezier(0.76, 0, 0.24, 1);
}

.lhfaeh {
  transition: all 0.5s cubic-bezier(0.76, 0, 0.24, 1);
}

.ulhuFEhh {
  transition: transform 0.5s cubic-bezier(0.76, 0, 0.24, 1);
}

.ulufluhf {
  transition: opacity 0.35s cubic-bezier(0.25, 0.46, 0.45, 0.94);
}

.svg {
  position: absolute;
  top: 0;
  width: 100%;
  height: calc(100% + 300px);
}

[data-wrapper-center] {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  transform-origin: center center;
  z-index: 2;
}

[data-image-center] {
  transform: scale(1.5);
}

.image-grid {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100vh;
  overflow: hidden;
}

.innerWrapper {
  position: relative;
  width: 77.5rem;
  height: 51.8rem;
  overflow: hidden;
}

/* about page */
.ulafemxcbouEhfejn {
  transform: translateY(100%);
}

.KEafUhkjfufhLFUlgfe {
  opacity: 0;
  position: absolute;
  inset: 0;
  z-index: 2;
  background: linear-gradient(
    180deg,
    rgba(0, 0, 0, 0) 50%,
    rgba(0, 0, 0, 0.5) 100%
  );
}

.h-full-screen {
  height: calc(var(--vh) * 100);
}

.project-css {
  height: min(764px, 46.35922vw);
  margin-top: 6px;
  position: relative;
  width: 50%;
}

.Ukudgdwmb7kawbdk {
  margin-left: calc((100% - var(--wrap-width)) * 0.5);
  width: var(--wrap-width);
}

.due-light .wrap-ml {
  border-bottom: 1.34px solid #ccc;
}

.wrap-ml {
  position: relative;
  overflow: hidden;
}

.due .wrap-ml {
  display: flex;
}

/* .Ugfhkaeuka {
  border-right: 1.34px solid #ccc;
} */

.title-1 {
  font-size: min(200px, 12.13592vw);
  letter-spacing: -0.02em;
  line-height: min(192px, 11.65049vw);
  margin-left: min(16px, 0.97087vw);
  opacity: 0.58;
  padding-top: min(53px, 3.21602vw);
  pointer-events: none;
  transition: 0.3s;
}

.Ugfhkaeuka {
  height: min(764px, 46.35922vw);
  margin-top: 6px;
  position: relative;
  width: 50%;
}

[data-image-section] {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  transform-origin: left left;
  z-index: 2;
}

@media (max-width: 700px) {
  .due .wrap-ml {
    border-bottom: none;
    display: block;
  }
}
@media (max-width: 700px) {
  .due a:first-child {
    border-right: none;
  }
}

@media (max-width: 700px) {
  .due-light a {
    border-bottom: 1.34px solid #ccc;
  }
}

@media (max-width: 700px) {
  .due a {
    display: block;
    height: 97.87234vw;
    margin-top: 0;
    width: 100%;
  }
}

@media (max-width: 700px) {
  .title-1 {
    font-size: min(80px, 21.2766vw);
    letter-spacing: -0.01em;
    line-height: min(72px, 19.14894vw);
    margin-left: 2rem;
    padding-top: min(24px, 6.38298vw);
  }
}

@media (max-width: 700px) {
  .title-small {
    width: 120px;
  }
}

@media (max-width: 700px) {
  .title-2 {
    bottom: 30px;
    left: 2rem;
  }
}

@media (max-width: 700px) {
  .title-large {
    width: 200px;
  }
}

/* about page */

